--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "leaflet-layers-tree-plugin",
+  "name": "leaflet-layer-tree-plugin",
   "version": "1.0.1",
-  "description": "LeafletLayersTreePlugin",
+  "description": "Leaflet.LayerTreePlugin",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/bambrikii/leaflet-layers-tree-plugin.git"
+    "url": "git+https://github.com/bambrikii/leaflet-layer-tree-plugin.git"
   },
   "keywords": [
     "Leaflet",
@@ -19,7 +19,7 @@
   "author": "Alexander Arakelyan",
   "license": "GPL-3.0",
   "bugs": {
-    "url": "https://github.com/bambrikii/leaflet-layers-tree-plugin/issues"
+    "url": "https://github.com/bambrikii/leaflet-layer-tree-plugin/issues"
   },
-  "homepage": "https://github.com/bambrikii/leaflet-layers-tree-plugin#readme"
+  "homepage": "https://github.com/bambrikii/leaflet-layer-tree-plugin#readme"
 }
